k8s/backend-dep.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-deployment
  namespace: taskpro-ns

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: rayyan12311/backend-taskflow-pro:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5050

          resources:
            requests:
              cpu: "250m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "128Mi"

          livenessProbe:
            httpGet:
              path: /
              port: 5050
            initialDelaySeconds: 20
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 5050
            initialDelaySeconds: 10
            periodSeconds: 5
