k8s/frontend-dep.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment
  namespace: taskpro-ns

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: rayyan12311/frontend-taskflow-pro:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "250m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "128Mi"
