k8s/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: taskpro-ns
spec:
  selector:
    app: backend
  ports:
  - port: 5050
    targetPort: 5050
