k8s/postgress-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: taskpro-ns
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
